Changed second SVG dominant-baseline attr

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                 stroke="white"
                 stroke-linecap="round"
             />
-            <text dominant-baseline="text-bottom">
+            <text dominant-baseline="text-after-edge">
                 <textPath href="#path2" strokeOffset="-100%">
                     This text follows a path
                     <animate
