--- a/index.html
+++ b/index.html
@@ -186,12 +186,78 @@
     </head>
     <body>
         <svg
-            class="circle"
+            class="moving-gradient"
             width="200"
             height="200"
             viewBox="0 0 200 200"
             xmlns="http://www.w3.org/2000/svg"
         >
+            <defs>
+                <radialGradient id="radialGrad" cx="0.5" cy="0.5" r="0.3" fx="0.5" fy="0.5">
+                    <stop offset="0%" stop-color="white" />
+                    <stop offset="100%" stop-color="#0c8768" />
+                    <animate
+                        attributeName="cx"
+                        begin="1s"
+                        dur="5s"
+                        keyTimes="0; 0.25; 0.50; 0.75; 1"
+                        values="0.5; 0.4; 0.6; 0.4; 0.5"
+                        repeatCount="indefinite"
+                        calcMode="spline"
+                        keySplines="
+                            0.1 0.8 0.2 1;
+                            0.1 0.8 0.2 1;
+                            0.1 0.8 0.2 1;
+                            0.1 0.8 0.2 1;"
+                    ></animate>
+                    <animate
+                        attributeName="cy"
+                        begin="1s"
+                        dur="5s"
+                        keyTimes="0; 0.25; 0.50; 0.75; 1"
+                        values="0.5; 0.4; 0.4; 0.6; 0.5"
+                        repeatCount="indefinite"
+                        calcMode="spline"
+                        keySplines="
+                            0.1 0.8 0.2 1;
+                            0.1 0.8 0.2 1;
+                            0.1 0.8 0.2 1;
+                            0.1 0.8 0.2 1;"
+                    ></animate>
+                    <animate
+                        attributeName="fx"
+                        begin="1.1s"
+                        dur="5s"
+                        keyTimes="0; 0.25; 0.50; 0.75; 1"
+                        values="0.5; 0.3; 0.7; 0.3; 0.5"
+                        repeatCount="indefinite"
+                        calcMode="spline"
+                        keySplines="
+                            0.1 0.8 0.2 1;
+                            0.1 0.8 0.2 1;
+                            0.1 0.8 0.2 1;
+                            0.1 0.8 0.2 1;"
+                    ></animate>
+                    <animate
+                        attributeName="fy"
+                        begin="1.1s"
+                        dur="5s"
+                        keyTimes="0; 0.25; 0.50; 0.75; 1"
+                        values="0.5; 0.3; 0.3; 0.7; 0.5"
+                        repeatCount="indefinite"
+                        calcMode="spline"
+                        keySplines="
+                            0.1 0.8 0.2 1;
+                            0.1 0.8 0.2 1;
+                            0.1 0.8 0.2 1;
+                            0.1 0.8 0.2 1;"
+                    ></animate>
+                </radialGradient>
+            </defs>
+            <circle r="100" cx="50%" cy="50%" fill="url(#radialGrad)" />
+        </svg>
+        <hr />
+        <svg width="200" height="200" viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
             <ellipse class="ellipse" rx="80" ry="40" cy="50%" cx="50%" />
         </svg>
         <code>Only works in Chrome</code>
