--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
         >
             <defs>
                 <radialGradient id="radialGrad" cx="0.5" cy="0.5" r="0.3" fx="0.5" fy="0.5">
-                    <stop offset="0%" stop-color="white" />
+                    <stop offset="0%" stop-color="#f5f182" />
                     <stop offset="100%" stop-color="#0c8768" />
                     <animate
                         attributeName="cx"
