--- a/index.html
+++ b/index.html
@@ -125,14 +125,20 @@
                 100% {
                     transform: scale(1);
                 }
-                25% {
+                16.6% {
                     transform: scale(0.5);
                 }
-                50% {
+                33.2% {
                     transform: scale(0.5) rotate(180deg);
                 }
-                75% {
+                49.9% {
                     transform: scale(1) rotate(180deg);
+                }
+                66.4% {
+                    transform: scale(0.5) rotate(180deg);
+                }
+                83% {
+                    transform: scale(0.5);
                 }
             }
 
